QtBeef/src/Qt/qitemselectionmodel.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QItemSelectionRange
// --------------------------------------------------------------
[CRepr]
struct QItemSelectionRange_Ptr: void
{
}
extension CQt
{
	[LinkName("QItemSelectionRange_new")]
	public static extern QItemSelectionRange_Ptr* QItemSelectionRange_new();
	[LinkName("QItemSelectionRange_new2")]
	public static extern QItemSelectionRange_Ptr* QItemSelectionRange_new2(QModelIndex_Ptr* topL, QModelIndex_Ptr* bottomR);
	[LinkName("QItemSelectionRange_new3")]
	public static extern QItemSelectionRange_Ptr* QItemSelectionRange_new3(QModelIndex_Ptr* index);
	[LinkName("QItemSelectionRange_new4")]
	public static extern QItemSelectionRange_Ptr* QItemSelectionRange_new4(QItemSelectionRange_Ptr* param1);
	[LinkName("QItemSelectionRange_Delete")]
	public static extern void QItemSelectionRange_Delete(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Swap")]
	public static extern void QItemSelectionRange_Swap(QItemSelectionRange_Ptr* self, QItemSelectionRange_Ptr* other);
	[LinkName("QItemSelectionRange_Top")]
	public static extern c_int QItemSelectionRange_Top(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Left")]
	public static extern c_int QItemSelectionRange_Left(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Bottom")]
	public static extern c_int QItemSelectionRange_Bottom(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Right")]
	public static extern c_int QItemSelectionRange_Right(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Width")]
	public static extern c_int QItemSelectionRange_Width(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Height")]
	public static extern c_int QItemSelectionRange_Height(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_TopLeft")]
	public static extern QPersistentModelIndex_Ptr* QItemSelectionRange_TopLeft(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_BottomRight")]
	public static extern QPersistentModelIndex_Ptr* QItemSelectionRange_BottomRight(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Parent")]
	public static extern QModelIndex_Ptr QItemSelectionRange_Parent(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Model")]
	public static extern QAbstractItemModel_Ptr* QItemSelectionRange_Model(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Contains")]
	public static extern bool QItemSelectionRange_Contains(QItemSelectionRange_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QItemSelectionRange_Contains2")]
	public static extern bool QItemSelectionRange_Contains2(QItemSelectionRange_Ptr* self, c_int row, c_int column, QModelIndex_Ptr* parentIndex);
	[LinkName("QItemSelectionRange_Intersects")]
	public static extern bool QItemSelectionRange_Intersects(QItemSelectionRange_Ptr* self, QItemSelectionRange_Ptr* other);
	[LinkName("QItemSelectionRange_Intersected")]
	public static extern QItemSelectionRange_Ptr QItemSelectionRange_Intersected(QItemSelectionRange_Ptr* self, QItemSelectionRange_Ptr* other);
	[LinkName("QItemSelectionRange_OperatorEqual")]
	public static extern bool QItemSelectionRange_OperatorEqual(QItemSelectionRange_Ptr* self, QItemSelectionRange_Ptr* other);
	[LinkName("QItemSelectionRange_OperatorNotEqual")]
	public static extern bool QItemSelectionRange_OperatorNotEqual(QItemSelectionRange_Ptr* self, QItemSelectionRange_Ptr* other);
	[LinkName("QItemSelectionRange_IsValid")]
	public static extern bool QItemSelectionRange_IsValid(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_IsEmpty")]
	public static extern bool QItemSelectionRange_IsEmpty(QItemSelectionRange_Ptr* self);
	[LinkName("QItemSelectionRange_Indexes")]
	public static extern void* QItemSelectionRange_Indexes(QItemSelectionRange_Ptr* self);
}
class QItemSelectionRange
{
	private QItemSelectionRange_Ptr* ptr;
	public this()
	{
		this.ptr = CQt.QItemSelectionRange_new();
	}
	public this(QModelIndex_Ptr* topL, QModelIndex_Ptr* bottomR)
	{
		this.ptr = CQt.QItemSelectionRange_new2(topL, bottomR);
	}
	public this(QModelIndex_Ptr* index)
	{
		this.ptr = CQt.QItemSelectionRange_new3(index);
	}
	public this(QItemSelectionRange_Ptr* param1)
	{
		this.ptr = CQt.QItemSelectionRange_new4(param1);
	}
	public ~this()
	{
		CQt.QItemSelectionRange_Delete(this.ptr);
	}
	public void Swap(QItemSelectionRange_Ptr* other)
	{
		CQt.QItemSelectionRange_Swap((.)this.ptr, other);
	}
	public c_int Top()
	{
		return CQt.QItemSelectionRange_Top((.)this.ptr);
	}
	public c_int Left()
	{
		return CQt.QItemSelectionRange_Left((.)this.ptr);
	}
	public c_int Bottom()
	{
		return CQt.QItemSelectionRange_Bottom((.)this.ptr);
	}
	public c_int Right()
	{
		return CQt.QItemSelectionRange_Right((.)this.ptr);
	}
	public c_int Width()
	{
		return CQt.QItemSelectionRange_Width((.)this.ptr);
	}
	public c_int Height()
	{
		return CQt.QItemSelectionRange_Height((.)this.ptr);
	}
	public QPersistentModelIndex_Ptr* TopLeft()
	{
		return CQt.QItemSelectionRange_TopLeft((.)this.ptr);
	}
	public QPersistentModelIndex_Ptr* BottomRight()
	{
		return CQt.QItemSelectionRange_BottomRight((.)this.ptr);
	}
	public QModelIndex_Ptr Parent()
	{
		return CQt.QItemSelectionRange_Parent((.)this.ptr);
	}
	public QAbstractItemModel_Ptr* Model()
	{
		return CQt.QItemSelectionRange_Model((.)this.ptr);
	}
	public bool Contains(QModelIndex_Ptr* index)
	{
		return CQt.QItemSelectionRange_Contains((.)this.ptr, index);
	}
	public bool Contains2(c_int row, c_int column, QModelIndex_Ptr* parentIndex)
	{
		return CQt.QItemSelectionRange_Contains2((.)this.ptr, row, column, parentIndex);
	}
	public bool Intersects(QItemSelectionRange_Ptr* other)
	{
		return CQt.QItemSelectionRange_Intersects((.)this.ptr, other);
	}
	public QItemSelectionRange_Ptr Intersected(QItemSelectionRange_Ptr* other)
	{
		return CQt.QItemSelectionRange_Intersected((.)this.ptr, other);
	}
	public bool IsValid()
	{
		return CQt.QItemSelectionRange_IsValid((.)this.ptr);
	}
	public bool IsEmpty()
	{
		return CQt.QItemSelectionRange_IsEmpty((.)this.ptr);
	}
	public void* Indexes()
	{
		return CQt.QItemSelectionRange_Indexes((.)this.ptr);
	}
}
interface IQItemSelectionRange
{
	public void Swap();
	public c_int Top();
	public c_int Left();
	public c_int Bottom();
	public c_int Right();
	public c_int Width();
	public c_int Height();
	public QPersistentModelIndex* TopLeft();
	public QPersistentModelIndex* BottomRight();
	public QModelIndex Parent();
	public QAbstractItemModel* Model();
	public bool Contains();
	public bool Contains2();
	public bool Intersects();
	public QItemSelectionRange Intersected();
	public bool IsValid();
	public bool IsEmpty();
	public void* Indexes();
}
// --------------------------------------------------------------
// QItemSelectionModel
// --------------------------------------------------------------
[CRepr]
struct QItemSelectionModel_Ptr: void
{
}
